@@ -21,14 +21,64 @@ rm -rf /etc/service/sshd /etc/my_init.d/00_regen_ssh_host_keys.sh
 #########################################
 
 # Repositories
-echo 'deb mirror://mirrors.ubuntu.com/mirrors.txt trusty main universe restricted' > /etc/apt/sources.list
-echo 'deb mirror://mirrors.ubuntu.com/mirrors.txt trusty-updates main universe restricted' >> /etc/apt/sources.list
-echo 'deb http://ppa.launchpad.net/webupd8team/java/ubuntu trusty main' >> /etc/apt/sources.list
-apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys EEA14886
+
+echo 'deb mirror://mirrors.ubuntu.com/mirrors.txt xenial main universe restricted' > /etc/apt/sources.list
+echo 'deb mirror://mirrors.ubuntu.com/mirrors.txt xenial-updates main universe restricted' >> /etc/apt/sources.list
+
 
 # Install Dependencies
 apt-get update -qq
 # Install general
+
+apt-get install -qy --force-yes --no-install-recommends apt-utils \
+                                                        wget \
+							unzip \
+							dialog \
+							gconf-service \
+							gconf-service-backend \
+							gconf2-common \
+							libappindicator1 \
+							libasound2 \
+							libasound2-data \
+							libatk1.0-0 \
+							libatk1.0-data \
+							libavahi-client3 \
+							libavahi-common-data \
+							libavahi-common3 \
+							libcups2 libcurl3 \
+							libdbusmenu-glib4 \
+							libdbusmenu-gtk4 \
+							libgconf-2-4 \
+							libgtk2.0-0 \
+							libgtk2.0-common \
+							libindicator7 \
+							libnspr4 \
+							libnss3 \
+							libnss3-nssdb \
+							libpango1.0-0 \
+							libpangox-1.0-0 \
+							libxss1 \
+							shared-mime-info \
+							xdg-utils \
+							libvte-common \
+							libvte9 \
+							lxterminal \
+							nano
+
+# Install window manager and x-server
+apt-get install -qy --force-yes --no-install-recommends vnc4server \
+                                                        x11-xserver-utils \
+							openbox \
+							xfonts-base \
+							xfonts-100dpi \
+							xfonts-75dpi \
+							libfuse2
+
+# Install xrdp
+apt-get install -qy --force-yes --no-install-recommends xrdp
+
+
+=======
 apt-get install -qy --force-yes --no-install-recommends wget \
                             				unzip
 
@@ -52,15 +102,6 @@ dpkg -i /tmp/x11rdp/x11rdp_0.9.0+devel-1_amd64.deb
 # xrdp needs to be installed seperately
 dpkg -i /tmp/x11rdp/xrdp_0.9.0+devel_amd64.deb
 
-# Install Guac
-echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | /usr/bin/debconf-set-selections
-apt-get install -y --force-yes oracle-java8-installer
-apt-get install -y --force-yes oracle-java8-set-default
-apt-get install -qy --force-yes --no-install-recommends libossp-uuid-dev \
-                                                        libpng12-dev \
-                                                        libfreerdp-dev \
-                                                        libcairo2-dev \
-                                                        tomcat7
 
 
 #########################################
@@ -102,7 +143,6 @@ cat <<'EOT' > /etc/my_init.d/02_app_config.sh
 APPNAME=${APP_NAME:-"GUI_APPLICATION"}
 
 sed -i -e "s#GUI_APPLICATION#$APPNAME#" /etc/xrdp/xrdp.ini
-sed -i -e "s#GUI_APPLICATION#$APPNAME#" /etc/guacamole/noauth-config.xml
 
 if [[ -e /startapp.sh ]]; then 
     chown nobody:users /startapp.sh
@@ -118,7 +158,9 @@ exec 2>&1
 WD=${WIDTH:-1280}
 HT=${HEIGHT:-720}
 
+
 exec /sbin/setuser nobody X11rdp :1 -bs -ac -nolisten tcp -geometry ${WD}x${HT} -depth 16 -uds
+
 EOT
 
 # xrdp
@@ -187,6 +229,7 @@ lib=libxup.so
 username=na
 password=na
 ip=127.0.0.1
+
 port=/tmp/.xrdp/xrdp_display_1
 chansrvport=/tmp/.xrdp/xrdp_chansrv_socket_1
 xserverbpp=16
@@ -263,58 +306,6 @@ exec 2>&1
 exec env DISPLAY=:1 HOME=/nobody /sbin/setuser nobody  /usr/bin/openbox-session
 EOT
 
-mkdir -p /etc/service/tomcat7
-cat <<'EOT' > /etc/service/tomcat7/run
-#!/bin/bash
-exec 2>&1
-
-touch /var/lib/tomcat7/logs/catalina.out
-
-cd /var/lib/tomcat7
-
-exec java -Djava.util.logging.config.file=/var/lib/tomcat7/conf/logging.properties \
-          -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager \
-          -Djava.awt.headless=true -Xmx128m -XX:+UseConcMarkSweepGC \
-          -Djava.endorsed.dirs=/usr/share/tomcat7/endorsed \
-          -classpath /usr/share/tomcat7/bin/bootstrap.jar:/usr/share/tomcat7/bin/tomcat-juli.jar \
-          -Dcatalina.base=/var/lib/tomcat7 -Dcatalina.home=/usr/share/tomcat7 \
-          -Djava.io.tmpdir=/tmp/tomcat7-tomcat7-tmp org.apache.catalina.startup.Bootstrap start
-EOT
-
-mkdir -p /etc/service/guacd
-cat <<'EOT' > /etc/service/guacd/run
-#!/bin/bash
-exec 2>&1
-
-exec /usr/local/sbin/guacd -f
-EOT
-
-mkdir -p /etc/guacamole
-cat <<'EOT' > /etc/guacamole/guacamole.properties
-# Location to read extra .jar's from (don't change for this docker config)
-lib-directory:  /var/lib/guacamole/classpath
-
-# Hostname and port of guacamole proxy (don't change for this docker config)
-guacd-hostname: localhost
-guacd-port:     4822
-
-# Auth provider class
-auth-provider: net.sourceforge.guacamole.net.auth.noauth.NoAuthenticationProvider
-
-# NoAuth properties
-noauth-config: /etc/guacamole/noauth-config.xml
-EOT
-
-
-cat <<'EOT' > /etc/guacamole/noauth-config.xml
-<configs>
-    <config name="GUI_APPLICATION" protocol="rdp">
-        <param name="hostname" value="127.0.0.1" />
-        <param name="port" value="3389" />
-        <param name="color-depth" value="16" />
-    </config>
-</configs>
-EOT
 
 # Openbox User nobody autostart
 cat <<'EOT' > /nobody/.config/openbox/autostart
@@ -333,45 +324,35 @@ chmod -R +x /etc/service/ /etc/my_init.d/
 ##             INSTALLATION            ##
 #########################################
 
-# Make needed directories
-mkdir -p /var/cache/tomcat7
-mkdir -p /var/lib/guacamole/classpath
-mkdir -p /usr/share/tomcat7/.guacamole
-mkdir -p /usr/share/tomcat7-root/.guacamole
-mkdir -p /root/.guacamole
-
-# Install guacd
-dpkg -i /tmp/guacamole/guacamole-server_0.9.7_amd64.deb
-ldconfig
-
-# Configure tomcat
-cp /tmp/guacamole/guacamole-0.9.7.war /var/lib/tomcat7/webapps/guacamole.war
-cp /tmp/guacamole/guacamole-auth-noauth-0.9.7.jar /var/lib/guacamole/classpath
-ln -s /etc/guacamole/guacamole.properties /usr/share/tomcat7/.guacamole/
-ln -s /etc/guacamole/guacamole.properties /usr/share/tomcat7-root/.guacamole/
-ln -s /etc/guacamole/guacamole.properties /root/.guacamole/
-
-# Fix tomcat webroot
-rm -Rf /var/lib/tomcat7/webapps/ROOT
-ln -s /var/lib/tomcat7/webapps/guacamole.war /var/lib/tomcat7/webapps/ROOT.war 
-
-### Compensate for GUAC-513
-ln -s /usr/local/lib/freerdp/guacsnd.so /usr/lib/x86_64-linux-gnu/freerdp/ 
-ln -s /usr/local/lib/freerdp/guacdr.so /usr/lib/x86_64-linux-gnu/freerdp/
 
 # openbox confg
 cp /tmp/openbox/rc.xml /nobody/.config/openbox/rc.xml
 chown nobody:users /nobody/.config/openbox/rc.xml
 
+
+# Install slimjet
+cd /tmp
+wget 'http://www.slimjet.com/download.php?version=lnx64&type=deb&beta=1&server=' -O slimjet.deb
+dpkg -i slimjet.deb
+
+
 # pulseauido rdp
 cp /tmp/x11rdp/module-xrdp* /usr/lib/pulse-4.0/modules
 chown -R 777 /usr/lib/pulse-4.0/modules
+
 
 #########################################
 ##                 CLEANUP             ##
 #########################################
 
 # Clean APT install files
-apt-get autoremove -y 
 apt-get clean -y
-rm -rf /var/lib/apt/lists/* /var/cache/* /var/tmp/* /tmp/guacamole /tmp/openbox /tmp/x11rdp
+apt-get autoclean -y
+apt-get autoremove -y
+rm -rf /usr/share/locale/*
+rm -rf /var/cache/debconf/*-old
+rm -rf /var/lib/apt/lists/*
+rm -rf /usr/share/doc/*
+rm -rf /tmp/* /var/tmp/*
+rm -rf /var/lib/apt/lists/* /var/cache/* /var/tmp/* /tmp/openbox
+
